force-app/main/default/objects/DocumentSelected__c/DocumentSelected__c.object-meta.xml
<CustomObject>
    <label>Documento selezionato</label>
    <nameField>
        <label>Nome Documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documenti selezionati</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>