force-app/main/default/objects/DocumentSelected__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Importo</description>
    <label>Importo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>