force-app/main/default/objects/DocumentSelected__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <description>Bollettino</description>
    <label>Bollettino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>