force-app/main/default/objects/DocumentSelected__c/fields/CommoditySector__c.field-meta.xml
<CustomField>
    <fullName>CommoditySector__c</fullName>
    <description>Descrizione della commodity relativa alla partita/Documento selezionato</description>
    <inlineHelpText>Descrizione della commodity relativa alla partita/Documento selezionato</inlineHelpText>
    <label>Servizio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>