force-app/main/default/objects/DocumentSelected__c/fields/ContractualAccount__c.field-meta.xml
<CustomField>
    <fullName>ContractualAccount__c</fullName>
    <description>Conto Contrattuale</description>
    <label>Conto Contrattuale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>