force-app/main/default/objects/DocumentSelected__c/fields/DocumentalSystem__c.field-meta.xml
<CustomField>
    <fullName>DocumentalSystem__c</fullName>
    <label>Sistema Archiviazione (Documentale)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>