force-app/main/default/objects/DocumentSelected__c/fields/DocumentResidue__c.field-meta.xml
<CustomField>
    <fullName>DocumentResidue__c</fullName>
    <description>Residuo da pagare per il Documento.</description>
    <label>Residuo Documento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>