force-app/main/default/objects/DocumentSelected__c/fields/EnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeId__c</fullName>
    <label>Id Plico (Documentale)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>