force-app/main/default/objects/DocumentSelected__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>Data Scadenza</description>
    <label>Data Scadenza</label>
    <type>Date</type>
</CustomField>