force-app/main/default/objects/DocumentSelected__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Dilazione</description>
    <label>Dilazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>