force-app/main/default/objects/DocumentSelected__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <description>Data Emissione</description>
    <label>Data Emissione</label>
    <type>Date</type>
</CustomField>