force-app/main/default/objects/DocumentSelected__c/fields/IssuingCompany__c.field-meta.xml
<CustomField>
    <fullName>IssuingCompany__c</fullName>
    <description>Società Emittente</description>
    <label>Società Emittente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>