force-app/main/default/objects/DocumentSelected__c/fields/IssuingCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>IssuingCompanyCode__c</fullName>
    <label>Codice Società Emittente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>