force-app/main/default/objects/DocumentSelected__c/fields/PaidCustomer__c.field-meta.xml
<CustomField>
    <fullName>PaidCustomer__c</fullName>
    <description>Campo che corrisponde all&apos;importo pagato dal cliente</description>
    <label>Pagato Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>