force-app/main/default/objects/DocumentSelected__c/fields/PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>PaymentMode__c</fullName>
    <description>Modalità di Pagamento</description>
    <label>Modalità di Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>