force-app/main/default/objects/DocumentSelected__c/fields/Position1__c.field-meta.xml
<CustomField>
    <fullName>Position1__c</fullName>
    <description>Campo utilizzato nel processo Paperless</description>
    <label>Posizione 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>