force-app/main/default/objects/DocumentSelected__c/fields/Position2__c.field-meta.xml
<CustomField>
    <fullName>Position2__c</fullName>
    <description>Campo utilizzato nel processo Paperless</description>
    <label>Posizione 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>