force-app/main/default/objects/DocumentSelected__c/fields/Position3__c.field-meta.xml
<CustomField>
    <fullName>Position3__c</fullName>
    <description>Campo utilizzato nel processo Paperless</description>
    <label>Posizione 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>