force-app/main/default/objects/DocumentSelected__c/fields/RaiFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>RaiFeeAmount__c</fullName>
    <description>Importo del canone rai a prescindere se sia stato pareggiato o meno</description>
    <label>Importo Canone Rai</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>