force-app/main/default/objects/DocumentSelected__c/fields/TotalCommunicationPayment__c.field-meta.xml
<CustomField>
    <fullName>TotalCommunicationPayment__c</fullName>
    <description>Totale Comunicazione Pagamento</description>
    <label>Totale Comunicazione Pagamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>