force-app/main/default/objects/DocumentSelected__c/fields/TvFeeResidual__c.field-meta.xml
<CustomField>
    <fullName>TvFeeResidual__c</fullName>
    <description>Residuo Canone Rai</description>
    <label>Residuo Canone Rai</label>
    <length>255</length>
    <type>Text</type>
</CustomField>